--- a/MVVM/View/DrivesView.xaml
+++ b/MVVM/View/DrivesView.xaml
@@ -261,7 +261,15 @@
                                         <Setter.Value>
                                             <ControlTemplate TargetType="ListBoxItem">
                                                 <Label Height="28" Content="{Binding TalentName}" Margin="2" x:Name="drivebonus" BorderBrush="{StaticResource EXPLightBlueBrush}" 
-                                                       Background="{StaticResource EXPDarkBlueBrush}" BorderThickness="1" />
+                                                       Background="{StaticResource EXPDarkBlueBrush}" BorderThickness="1"
+                                                       ToolTipService.InitialShowDelay="0"
+                                                       ToolTipService.Placement="Left">
+                                                    <Label.ToolTip>
+                                                        <ToolTip Background="Transparent" BorderThickness="0">
+                                                            <user:TalentToolTip DataContext="{Binding}"/>
+                                                        </ToolTip>
+                                                    </Label.ToolTip>
+                                                </Label>
 
                                                 <ControlTemplate.Triggers>
                                                     <Trigger Property="IsMouseOver" Value="True">
